# Project-Atreides

./: .gitignore  AGENTS.md  Atreides-README.md  FOLLOW-UPS.md  LICENSE  README.md  atreides-settlement-dashboard.html  pyproject.toml  settlement-operations-analyst.md  trade-support-analyst.md
aureon/: __init__.py
aureon/agents/: __init__.py
aureon/agents/tier1/: __init__.py  outputs.py  settlement_operations_analyst.py
aureon/agents/tier2/: README.md  __init__.py  eligibility.py  fiat_operations_specialist.py  outputs.py  routing_tables.py
aureon/contracts/: README.md  __init__.py  asset_class.py  custody_object.py  dsor_stub.py  failure_mode.py  inherent_safety.py  quorum.py  settlement.py
aureon/contracts/operations/: __init__.py  base.py  derivatives.py  digital.py  equity.py  fixed_income.py  funds.py  fx.py  lifecycle.py  structured.py  tokenized.py
aureon/doctrine/: __init__.py
aureon/dsor/: __init__.py  record.py  store.py
aureon/rails/: __init__.py
doctrine/: AUR-CANONICAL-001-v1_6.md  AUR-COCKPIT-001-v0_1.md  AUR-CUSTODY-001-v1_0.md
tests/agents/tier1/: conftest.py  test_settlement_operations_analyst.py
tests/agents/tier2/: conftest.py  test_eligibility.py  test_fiat_operations_specialist.py  test_integration.py  test_outputs.py  test_routing_tables.py
tests/contracts/: test_asset_class.py  test_custody_object.py  test_dsor_stub.py  test_failure_mode.py  test_inherent_safety.py  test_quorum.py  test_settlement.py
tests/contracts/operations/: conftest.py  test_base.py  test_fx.py  (+9 more)
tests/dsor/: conftest.py  test_record.py  test_store.py
(+3 files in other folders)
