[project]
name = "aureon"
version = "0.1.0"
description = "Aureon Asset Services — doctrine-native institutional governance framework"
authors = [{name = "Guillermo Ravelo", email = "bill@ravelostrategicsolutions.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["asset-services", "post-trade", "custody", "governance", "doctrine"]

dependencies = [
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aureon*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["PLR0913"]  # too-many-arguments — Pydantic models legitimately have many fields

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --cov=aureon --cov-report=term-missing"
